[package]
name = "creditcard"
version = "0.1.0"
edition = "2021"

# Specify that this is a GUI application on Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = "0.25.6"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# This tells Rust to build a Windows GUI application (no console window)
[[bin]]
name = "creditcard"
path = "src/main.rs"
# "windows_subsystem = windows" removes the console window
# "windows_subsystem = console" would keep the console window
